Quick update to appease my fans (fan)

--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
- <img src="
- https://media1.tenor.com/m/1l9R9y3_WIkAAAAd/jack-hammer-construction-worker.gif 
- width="500" height="500"> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MY awnswome site!!!</title>
+    <link rel = "stylesheet" href="css/main.css">
+</head>
+<body>
+    <script src = "js/main.js"></script>
+</body>
+</html>
+
+<h1>Hii welcome to my site :DDDD</h1>
+<h4>Here we gatekeep, girl, and boss</h4>
+<a href="https://www.google.com">My other site</a> 
+
+
+
+<h4>Webpage is a wip. College got me busy. :(</h4>
+
+<img src="https://media1.tenor.com/m/1l9R9y3_WIkAAAAd/jack-hammer-construction-worker.gif" width="500" height="500"> 
